Оновлено CSS із змінними

--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
+:root {
+  --link-color: red;
+  --paragraph-font-size: 24px;
+}
+
 a[href^="https"] {
-    color: red;
-  }
-  ul + p {
-    font-size: 24px;
-  }
+  color: var(--link-color);
+}
+
+ul + p {
+  font-size: var(--paragraph-font-size);
+}
